--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "version": "1.0.0",
     "description": "Brand new cordova project with framework7 - vue - webpack!",
     "scripts": {
-        "default": "echo \"There is no scripts you can run with npm run command.\" && exit 1"
+        "default": "echo \"There is no scripts you can run with npm run command.\" && exit 1",
+        "dev": "cordova run browser -- --lr"
     },
     "keywords": [
         "ecosystem:cordova"
