--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
         "babel-preset-env": "^1.6.1",
+        "cordova-android": "^7.0.0",
         "cordova-browser": "^5.0.3",
         "cordova-plugin-whitelist": "^1.3.3",
         "font-awesome": "^4.7.0",
@@ -61,7 +62,8 @@
             "cordova-plugin-whitelist": {}
         },
         "platforms": [
-            "browser"
+            "browser",
+            "android"
         ]
     }
 }
