--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
         "babel-preset-env": "^1.6.1",
         "cordova-android": "^7.0.0",
         "cordova-browser": "^5.0.3",
+        "cordova-plugin-vibration": "^3.0.1",
         "cordova-plugin-whitelist": "^1.3.3",
         "font-awesome": "^4.7.0",
         "framework7": "^2.0.6",
@@ -59,7 +60,8 @@
     "displayName": "Soccer",
     "cordova": {
         "plugins": {
-            "cordova-plugin-whitelist": {}
+            "cordova-plugin-whitelist": {},
+            "cordova-plugin-vibration": {}
         },
         "platforms": [
             "browser",
