--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "framework7-icons": "^0.9.0",
         "framework7-vue": "^2.0.0",
         "loglevel": "^1.4.1",
+        "moment": "^2.21.0",
         "vue": "^2.5.13",
         "vue-axios": "^2.0.2",
         "vuex": "^3.0.1"
