--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "moment": "^2.21.0",
         "vue": "^2.5.13",
         "vue-axios": "^2.0.2",
+        "vue-persistent-state": "^0.1.1",
         "vuex": "^3.0.1"
     },
     "displayName": "Soccer",
