--- a/.gitignore
+++ b/.gitignore
@@ -29,9 +29,10 @@ build/Release
 # Dependency directories
 node_modules
 jspm_packages
-platforms
+platforms/
+gen/
 www
-plugins
+plugins/
 
 # Optional npm cache directory
 .npm
@@ -44,3 +45,4 @@ node_modules/
 dist/
 npm-debug.log
 src/fonts
+.idea
